# PyART

./: .buildinfo  .gitignore  .pre-commit-config.yaml  =3.0.0  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  genindex.html  index.html  objects.inv  py-modindex.html  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  sphinx-reading-durations.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: documentation.yml  draft-pdf.yml  tests.yml
PyART/: README.md  __init__.py  logging_config.py  simulations.py  waveform.py
PyART/analysis/: calc_coprecessing.py  (+10 more)
_modules/: PyART.html  index.html  simulations.html  tocatalog_icc.html
_sources/: index.md.txt
autoapi/: index.html
checks/: chk_sxs.py  match_sxs.py
docs/: LOGGING.md
examples/: cat.py  compare_between_catalogs.py  icc.py  match_sxs.py  opt_test.py  sacra_plot.py  scat_teob.py
hooks/: pre-commit
meetings/: 190624.md
paper/: pyart.md  references.bib
pyart/: README.md  __init__.py  simulations.py  waveform.py
scripts/: patch_pycbc_numpy2.py
tests/: conftest.py  test_analytic.py  test_bhpt_pnsf.py  test_gra.py  test_icc_public.py  test_lal.py  test_match.py  test_mathematica_parser.py  test_phenom.py  test_pnpedia.py  test_rit.py  test_sxs.py  test_waveform.py
tutorials/: catalog_downloads.html  coordinates_and_twopuncture.html  iccub_waveform_integration.html  intro_to_waveforms.html  mismatch.html  nr_eob_mismatch.html  optimizing_initial_conditions.html  phase_alignment.html  pnpedia.html  scattering_angles.html
(+244 files in other folders)
