[metadata]
name = PyART
description = Python Analytical Relativity Toolkit
author = The TEOBResumS team
author_email = rgamba@berkeley.edu
license = MIT
version = 0.0.dev1
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: BSD License
    Operating System :: MacOS
    Operating System :: Unix
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Physics
    Natural Language :: English
    Intended Audience :: Science/Research

[options]
packages = find:
install_requires = file: requirements.txt
python_requires = >=3.9